k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sdg-greencampus
  labels:
    app.kubernetes.io/name: greencampus
    sdg/theme: clean-energy-climate-action
