k8s/06-traefik-simple.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-simple
  namespace: kube-system
  labels:
    app: traefik-simple
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-simple
  template:
    metadata:
      labels:
        app: traefik-simple
    spec:
      serviceAccountName: traefik-simple
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: traefik
          image: traefik:v3.1
          args:
            - --entrypoints.web.address=:80
            - --providers.kubernetesingress=true
            - --providers.kubernetesingress.allowemptyservices=true
            - --log.level=INFO
          ports:
            - name: web
              containerPort: 80
              hostPort: 80
          resources:
            requests:
              cpu: 30m
              memory: 64Mi
            limits:
              cpu: 150m
              memory: 160Mi
